--- a/src/app/local/local.component.html
+++ b/src/app/local/local.component.html
@@ -1,2 +1,2 @@
 <input type="text" [(ngModel)]="local">
-<button mat-flat-button color="primary" class="large" (click)="addtolocal(local)">Create</button>
+<button  class="large" (click)="addtolocal(local)">Create</button>
