--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,1 @@
-<input type="text" [(ngModel)]="newTask" placeholder="Add a task">
-<button (click)="openDialog()">Add Task</button>
-<app-dialog [input]="task"></app-dialog>
+<button (click)="Openpopup()" mat-raised-button color="primary"> Open Popup</button>
