--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,1 +1,25 @@
-<button (click)="Openpopup()" mat-raised-button color="primary"> Open Popup</button>
+<!-- <button (click)="Openpopup()" mat-raised-button color="primary"> Open Popup</button> -->
+
+
+
+
+
+
+
+<h1 mat-dialog-title>Todo list</h1>
+<!-- <div mat-dialog-content> -->
+  Enter Name: <input type="text" placeholder="Enter new task" #task> &nbsp; &nbsp;
+<button (click)="addTask(task.value)">add task</button>
+<!-- </div> -->
+<ul *ngFor="let item of list; let i = index">
+    <li>
+       {{item.name}} <button (click)="dltname(i)">Delete</button>
+    </li>
+</ul>
+<br><br>
+
+<div mat-dialog-action>
+    <button (click)="closepopup()" style="color: blueviolet;">close</button> &nbsp;&nbsp;&nbsp;
+    <button [mat-dialog-close]="closemessage" style="color: blueviolet;">cancel</button>
+    
+    </div>
