--- a/src/app/local/local.component.html
+++ b/src/app/local/local.component.html
@@ -1,2 +1,5 @@
 <input type="text" [(ngModel)]="local">
 <button  class="large" (click)="addtolocal(local)">Create</button>
+
+
+<!-- <h1>Hello, {{ name }}</h1> -->
