--- a/src/app/components/child1/child1.component.html
+++ b/src/app/components/child1/child1.component.html
@@ -1,7 +1,10 @@
 
 <div *ngIf="childData">
-    <p>Received data from parent:</p>
-    <ul>
-      <li *ngFor="let field of fields">{{ field }}: {{ childData[field] }}</li>
-    </ul>
-  </div>
+  <p>Received data from parent:</p>
+  <ul>
+    <li>Name: {{ childData.name }}</li>
+    <li>Age: {{ childData.age }}</li>
+    <li>Email: {{ childData.email }}</li>
+    <li>Gender: {{ childData.gender }}</li>
+  </ul>
+</div>
