--- a/src/app/components/parent1/child2.component.html
+++ b/src/app/components/parent1/child2.component.html
@@ -1,12 +1,12 @@
-<h1>Send data parent to child component using reactive form</h1>
-
   <form [formGroup]="parentForm" (ngSubmit)="submitForm()">
-    <input formControlName="name" placeholder="Name"><br> <br>
-    <input formControlName="age" placeholder="Age">  <br> <br>
-    <input formControlName="email" placeholder="Email"> <br> <br>
-    <select formControlName="gender" placeholder="Gender"> <br> <br>
-      <option *ngFor="let option of genderOptions" [value]="option">{{ option }}</option>
-    </select>
-    <button type="submit"   (click)="showChildComponent()">Submit</button>
+ Enter name:   <input formControlName="name" placeholder="Name"> <br><br>
+ Enter age:   <input formControlName="age" placeholder="Age"><br><br>
+ Enter email:   <input formControlName="email" placeholder="Email"><br><br>
+ Enter gender:   <select formControlName="gender" placeholder="Gender"> <br><br>
+      <option *ngFor="let option of genderOptions" [value]="option">
+        {{ option }}
+      </option>
+    </select> &nbsp; &nbsp;
+    <button type="submit" (click)="showChildComponent()">Submit</button>
   </form>
-  <app-child1 *ngIf="showChild" [childData]="parentForm.value"></app-child1>
+  <app-child1 *ngIf="showChild" [childData]="submittedData"></app-child1>
